<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/TroyLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/story_logo" />

    <Button
        android:id="@+id/student_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_search"
        android:text="@string/stusearchbutton" />

    <Button
        android:id="@+id/shuttle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/arrow_right"
        android:text="@string/shuttlebutton" />

    <Button
        android:id="@+id/maps_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/arrow_right"
        android:text="@string/mapsbutton" />

    <Button
        android:id="@+id/catalog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/arrow_right"
        android:text="@string/catalogbutton" />

    <Button
        android:id="@+id/calendar_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/arrow_right"
        android:text="@string/calendarbutton" />

</LinearLayout>
